methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
    prendBiscuit()
                ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuit())
  ^