methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while(estSurBiscuit()){
    if(!estFaceMur){
    	avance()
    } else gauche()
    if (getCouleurSol() != Color.green){
      recule()
      gauche()
    }
  }
  if(estSurBiscuit())
  	prendBiscuit()
}